--- a/admin-profile/package.json
+++ b/admin-profile/package.json
@@ -16,8 +16,10 @@
     "framer-motion": "^12.9.4",
     "input": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.507.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.1",
     "otp": "^1.1.2",
     "react": "^19.0.0",
@@ -28,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
