--- a/admin-profile/package.json
+++ b/admin-profile/package.json
@@ -13,7 +13,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.9.4",
+    "cookies-next": "^5.1.0",
+    "framer-motion": "^12.10.1",
     "input": "^1.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.507.0",
